GDS-667 IE11 js transpiling issues - Fixed issues with JS transpiling - updated browserslistrc with link to browsers supported - updated config to watch `main.js` - updated package.js with latest babel - added polyfill for `NodeList.forEach` this isnt covered by babel - removed `Array.find` from utilities in favour of `.filter` - corrected reversed styles in `header.scss`

--- a/src/patterns/header/_header.scss
+++ b/src/patterns/header/_header.scss
@@ -62,7 +62,7 @@ $search-input--text-color: $dark80;
   }
 
   &__wrapper{
-    @include nsw-spacing(padding, none sm);
+    @include nsw-spacing(padding, sm none);
     display: flex;
     flex-direction: row;
     justify-content: space-between;
